fix the overflow width

--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,6 @@ body {
   height: 100%;
   margin: 0;
   padding: 0;
-  overflow-x: hidden;
 }
 
 body {
@@ -43,7 +42,7 @@ body {
 }
 
 .paperOverlay {
-  position: absolute;
+  position: fixed;
   top: 0;
   bottom: 0;
   left: 0;
